tests/expectations/compiler/array/array_write_fail.out
DCE_ENABLED:
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:4:9
     |
   4 |         a[0u32] = false;
     |         ^^^^^^^
DCE_DISABLED:
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:4:9
     |
   4 |         a[0u32] = false;
     |         ^^^^^^^